<resources>
    <string name="app_name">ShoeStore</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Register</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="instructions_button">Instructions</string>
    <string name="welcome_title">Welcome to the shoes store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome to the greatest shoes store of all times</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_text">Here we are going to teach you how to buy. First you will see an empty list of shoes,then you can add a new shoe by pressing the detail button</string>
    <string name="shoes_button">Go to shoes list</string>
    <string name="details_title">Shoe details</string>
    <string name="shoe_name">Name:</string>
    <string name="shoe_company">Company:</string>
    <string name="shoe_size">Size:</string>
    <string name="shoe_description">Description:</string>
    <string name="add_shoe">ADD SHOE</string>
    <string name="todo">TODO</string>
</resources>
